# simple-eyeglasses-detector

./: CMakeLists.txt  eyeglasses_detector.cpp  eyeglasses_detector.h  readme.md  svm_model.hpp
